Bugfix & improvement in pasting image in canvas, FrameShiftPlayer.js

--- a/styles/FrameShiftPlayer.css
+++ b/styles/FrameShiftPlayer.css
@@ -91,6 +91,8 @@
 #frameShiftPlayer .options-menu .more-menu-div {
     display: none;
     position: absolute;
+    top: 20px;
+    left: -60px;
     background-color: rgb(29 38 32);
     grid-template-columns: repeat(4, 1fr);
     gap: 5px;
